# zotero-mcp-py

./: .editorconfig  .gitignore  README.md  main.py  pyproject.toml
docs/: README-zhCN.md
scripts/: format.py  release.py  run_tests.py
src/: __init__.py  config.py  logger.py  models.py  zotero_ex.py  zotero_mcp.py
tests/: conftest.py  test_zotero_ex.py
