[project]
name = "zotero-mcp-py"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "httpx[socks]>=0.28.1",
    "pydantic>=2.12.5",
    "pyzotero>=1.8.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-sugar>=1.1.1",
    "pytest-cov>=7.0.0",
    "pytest-dependency>=0.6.0",
    "ruff>=0.14.14",
]

[tool.ruff]
preview = true
fix-only = true
show-fixes = true
output-format = "grouped"
line-length = 100
src = [".", "inputflow", "tests"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "single"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint]
preview = true
select = ["E4", "E7", "E9", "F", "I"]
